crates/bingo-provider-openai/src/snapshots/bingo_provider_openai__request__tests__a_text_turn_encodes_to_a_stateless_streaming_body.snap
---
source: crates/bingo-provider-openai/src/request.rs
expression: "encode(&request, Variant::Default)"
---
{
  "model": "gpt-5.4",
  "stream": true,
  "store": false,
  "max_output_tokens": 4096,
  "instructions": "You are bingo.\n\nThe working directory is /repo.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "hello"
        }
      ]
    }
  ]
}
