crates/bingo-provider-openai/src/snapshots/bingo_provider_openai__request__tests__a_tool_round_encodes_the_schema_the_call_and_its_result.snap
---
source: crates/bingo-provider-openai/src/request.rs
expression: "encode(&request, Variant::Default)"
---
{
  "model": "gpt-5.4",
  "stream": true,
  "store": false,
  "max_output_tokens": 4096,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "read Cargo.toml"
        }
      ]
    },
    {
      "type": "function_call",
      "call_id": "call_01Read",
      "name": "Read",
      "arguments": "{\"file_path\":\"Cargo.toml\"}"
    },
    {
      "type": "function_call_output",
      "call_id": "call_01Read",
      "output": "[package]"
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "It is a workspace manifest."
        }
      ]
    },
    {
      "type": "function_call_output",
      "call_id": "call_01Miss",
      "output": "{\"is_error\":true,\"content\":\"no such file\"}"
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "Read",
      "description": "Read a file from the filesystem.",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          }
        },
        "required": [
          "file_path"
        ]
      },
      "strict": false
    }
  ]
}
