crates/bingo-provider-openai/src/snapshots/bingo_provider_openai__request__tests__an_image_becomes_a_data_url_input_image.snap
---
source: crates/bingo-provider-openai/src/request.rs
expression: "encode(&request, Variant::Default)"
---
{
  "model": "gpt-5.4",
  "stream": true,
  "store": false,
  "max_output_tokens": 4096,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "what is this?"
        },
        {
          "type": "input_image",
          "image_url": "data:image/png;base64,iVBORw0KGgo="
        }
      ]
    }
  ]
}
