crates/bingo-provider-openai/src/snapshots/bingo_provider_openai__request__tests__reasoning_asks_for_encrypted_state_and_replays_only_what_carries_it.snap
---
source: crates/bingo-provider-openai/src/request.rs
expression: body
---
{
  "model": "gpt-5.4",
  "stream": true,
  "store": false,
  "max_output_tokens": 4096,
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "why?"
        }
      ]
    },
    {
      "type": "reasoning",
      "id": "rs_01",
      "summary": [],
      "encrypted_content": "gAAAAAB"
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Because it is simpler."
        }
      ]
    }
  ],
  "reasoning": {
    "effort": "high",
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ]
}
